--- a/notebooks/modern-RNN.ipynb
+++ b/notebooks/modern-RNN.ipynb
@@ -85,13 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "36b4b644",
    "metadata": {},
    "outputs": [],
    "source": [
     "@d2l.add_to_class(LSTMScratch)\n",
     "def forward(self, inputs, H_C=None):\n",
+    "    # inputs shape: (num_steps, batch_size, num_inputs/vocab_size)\n",
     "    if H_C is None:\n",
     "        # Initial state with shape: (batch_size, num_hiddens)\n",
     "        H = torch.zeros((inputs.shape[1], self.num_hiddens),\n",
@@ -102,6 +103,7 @@
     "        H, C = H_C\n",
     "    outputs = []\n",
     "    for X in inputs:\n",
+    "        # X shape: (batch_size, num_inputs)\n",
     "        I = torch.sigmoid(torch.matmul(X, self.W_xi) +\n",
     "                        torch.matmul(H, self.W_hi) + self.b_i)\n",
     "        F = torch.sigmoid(torch.matmul(X, self.W_xf) +\n",
@@ -112,6 +114,10 @@
     "                           torch.matmul(H, self.W_hc) + self.b_c)\n",
     "        C = F * C + I * C_tilde\n",
     "        H = O * torch.tanh(C)\n",
+    "        # H shape: (batch_size, num_hiddens)\n",
+    "        # LSTMScratch is a low-level scratch impelmentation, outputs is a list. \n",
+    "        # The caller will stack into a tensor: (num_steps, batch_size, num_hiddens)\n",
+    "        # caller like d2l.RNNLMScratch or nn.LSTM should return tensor\n",
     "        outputs.append(H)\n",
     "    return outputs, (H, C)"
    ]
@@ -13015,6 +13021,7 @@
     }
    ],
    "source": [
+    "# num_steps: length of each training sequence\n",
     "data = d2l.TimeMachine(batch_size=1024, num_steps=32)\n",
     "lstm = LSTMScratch(num_inputs=len(data.vocab), num_hiddens=32)\n",
     "model = d2l.RNNLMScratch(lstm, vocab_size=len(data.vocab), lr=4)\n",
@@ -25946,7 +25953,9 @@
     "\n",
     "lstm = LSTM(num_inputs=len(data.vocab), num_hiddens=32)\n",
     "model = d2l.RNNLM(lstm, vocab_size=len(data.vocab), lr=4)\n",
-    "trainer.fit(model, data)"
+    "trainer.fit(model, data)\n",
+    "\n",
+    "# num_steps is decided by the data loader, see above: data = d2l.TimeMachine(batch_size=1024, num_steps=32)"
    ]
   },
   {
@@ -26048,12 +26057,14 @@
    "source": [
     "@d2l.add_to_class(GRUScratch)\n",
     "def forward(self, inputs, H=None):\n",
+    "    # inputs shape: (num_steps, batch_size, num_inputs/vocab_size)\n",
     "    if H is None:\n",
     "        # Initial state with shape: (batch_size, num_hiddens)\n",
     "        H = torch.zeros((inputs.shape[1], self.num_hiddens),\n",
     "                      device=inputs.device)\n",
     "    outputs = []\n",
     "    for X in inputs:\n",
+    "        # X shape: (batch_size, num_inputs)\n",
     "        Z = torch.sigmoid(torch.matmul(X, self.W_xz) +\n",
     "                        torch.matmul(H, self.W_hz) + self.b_z)\n",
     "        R = torch.sigmoid(torch.matmul(X, self.W_xr) +\n",
@@ -85548,7 +85559,16 @@
     "        # outputs = list of num_steps hidden states(batch_size, num_hiddens)\n",
     "        # Hs[0] = final hidden state from layer 0 = (batch_size, num_hiddens)\n",
     "        outputs, Hs[i] = self.rnns[i](outputs, Hs[i])\n",
-    "        # outputs: (num_steps, batch_size, num_hidden)\n",
+    "        # outputs: (num_steps, batch_size, num_hidden) to be feed into next layer\n",
+    "        # For each time step, For each sample in the batch, You have the top-layer hidden state\n",
+    "        # Hs = [\n",
+    "        #   H_final_time_step_in_layer0,  # (batch_size, num_hiddens)\n",
+    "        #   H_final_time_step_in_layer1   # (batch_size, num_hiddens)\n",
+    "        #   ...\n",
+    "        # ]\n",
+    "        # Why does it matter to store final hidden states for each layer?\n",
+    "        #     It only matters if you plan to continue the sequence or do something stateful.\n",
+    "        #     Otherwise, for standard language modeling, it’s mostly bookkeeping.\n",
     "        outputs = torch.stack(outputs, 0)\n",
     "    return outputs, Hs\n",
     "\n",
@@ -85661,6 +85681,7 @@
     "    # torch.cat((f, b), -1): Concatenates along last dimension (feature dimension)\")\n",
     "    # Each Hᵢ has shape (batch_size, num_hiddens * 2)\")\n",
     "\n",
+    "    # output shape: list(length num_steps) of (batch_size, num_hiddens * 2)\n",
     "    return outputs, (f_H, b_H)"
    ]
   },
@@ -86972,16 +86993,17 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### Encoder–Decoder Architecture\n",
+    "### Encoder–Decoder Architecture\n",
     "\n",
-    "##### What is Encoder–Decoder\n",
+    "#### What is Encoder–Decoder\n",
     "- An architecture for handling **variable‑length input and output sequences**.\n",
     "- Used in translation, summarization, speech recognition, caption generation.\n",
     "- Consists of:\n",
-    "  - **Encoder** → reads input sequence and compresses it into a context representation.\n",
+    "  - **Encoder** → reads input sequence and compresses it into a **context representation**.\n",
     "  - **Decoder** → generates output sequence conditioned on encoder representation.\n",
     "\n",
-    "##### Structure\n",
+    "#### Structure\n",
+    "\n",
     "##### Encoder\n",
     "- Processes tokens step by step (often with an RNN / LSTM / GRU).\n",
     "- Produces hidden states; the final one becomes the **context vector**.\n",
@@ -86992,11 +87014,11 @@
     "- Generates tokens sequentially, typically autoregressively.\n",
     "- Training often uses **teacher forcing**.\n",
     "\n",
-    "##### Why it Works\n",
+    "#### Why it Works\n",
     "- It allows different input/output lengths → far more general than classification.\n",
     "- Core idea: compress full sentence meaning into a vector, then expand into output.\n",
     "\n",
-    "##### Limitation\n",
+    "#### Limitation\n",
     "- **Single context vector bottleneck** limits performance on long sequences.\n",
     "- Decoder may struggle to remember whole input if compressed too aggressively.\n",
     "- Solution later: **Attention mechanism**, allowing access to all encoder states."
@@ -87157,7 +87179,7 @@
     "        # embs shape: (num_steps, batch_size, embed_size)\n",
     "        outputs, state = self.rnn(embs)\n",
     "        # outputs shape: (num_steps, batch_size, num_hiddens)  hidden state at each time step (last layer only)\n",
-    "        # state   shape: (num_layers, batch_size, num_hiddens) final hidden state for each layer\n",
+    "        # state   shape: (num_layers, batch_size, num_hiddens) final hidden state for each layer (last time step only)\n",
     "        return outputs, state"
    ]
   },
@@ -87191,7 +87213,7 @@
    "id": "a64abca7",
    "metadata": {},
    "source": [
-    "ensor.repeat(a, b, c)\n",
+    "tensor.repeat(a, b, c)\n",
     " - copy along dim0   a times\n",
     " - copy along dim1   b times\n",
     "-  copy along dim2   c times"
@@ -87218,13 +87240,15 @@
     "        return enc_all_outputs\n",
     "\n",
     "    def forward(self, X, state):\n",
-    "        # X shape: (batch_size, num_steps)\n",
+    "        # X shape:    (batch_size, num_steps)\n",
     "        # embs shape: (num_steps, batch_size, embed_size)\n",
     "        embs = self.embedding(X.t().type(torch.int32))\n",
     "\n",
     "        # in GRU (and RNN/LSTM):\n",
-    "        #   enc_outputs[-1]: The output from the final layer at the last time step\n",
-    "        #   enc_state[-1]:   The final hidden state of the final layer\n",
+    "        #   enc_all_outputs.enc_outputs shape: (num_steps, batch_size, num_hiddens)  hidden state at each time step (last layer only)\n",
+    "        #   enc_all_outputs.enc_state   shape: (num_layers, batch_size, num_hiddens) final hidden state for each layer (last time step only)\n",
+    "        #   enc_all_outputs.enc_outputs[-1]: The output from the final layer at the last time step\n",
+    "        #   enc_all_outputs.enc_state[-1]:   The final hidden state of the final layer\n",
     "        # These two are identical because in RNN architectures, the \"output\" at any time step is the hidden state at that time step. \n",
     "        # There's no additional transformation - the hidden state is directly used as the output.\n",
     "        enc_output, hidden_state = state\n",
@@ -87239,17 +87263,63 @@
     "        # embs_and_context: (num_steps, batch_size, embed_size + num_hiddens)\n",
     "        embs_and_context = torch.cat((embs, context), -1)\n",
     "\n",
-    "        # outputs shape: (num_steps, batch_size, num_hiddens)\n",
+    "        # outputs shape:      (num_steps, batch_size, num_hiddens)\n",
     "        # hidden_state shape: (num_layers, batch_size, num_hiddens)\n",
     "        outputs, hidden_state = self.rnn(embs_and_context, hidden_state)\n",
     "        # more about previous line: embs_and_context and hidden_state come from the encoder, but they serve different purposes inside the decoder.\n",
-    "        # hidden_state updates every step  → dynamic decoder state\n",
-    "        # context inside embs_and_context stays constant → background information\n",
+    "        # hidden_state updates in every subsequent steps  → dynamic decoder state\n",
+    "        # context inside embs_and_context stays constant  → background information\n",
     "\n",
     "        # outputs shape: (batch_size, num_steps, vocab_size)\n",
     "        outputs = self.dense(outputs).swapaxes(0, 1)\n",
     "\n",
     "        return outputs, [enc_output, hidden_state]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c63cbd",
+   "metadata": {},
+   "source": [
+    "#### Encoder: time-major (num_steps, batch_size, hidden)\n",
+    "\n",
+    "Why this layout?\n",
+    "\n",
+    "The encoder is a pure recurrent computation over time.\n",
+    "\n",
+    "\t• RNN/GRU/LSTM in PyTorch natively operate time-major\n",
+    "\t• Time-major is cache-friendly and avoids extra transposes inside the RNN loop\n",
+    "\t• Encoder outputs are mostly used internally:\n",
+    "\t    • passed to the decoder as state\n",
+    "\t    • sliced by time index (enc_output[-1])\n",
+    "\t    • used by attention (which usually expects time-major)\n",
+    "\n",
+    "So D2L keeps: enc_outputs: (num_steps, batch_size, num_hiddens) , this matches with \"outputs, state = self.rnn(X, state)\"\n",
+    "\n",
+    "#### Decoder: batch-major (batch_size, num_steps, vocab_size)\n",
+    "\n",
+    "The decoder has a very different downstream consumer.\n",
+    "\n",
+    "Who consumes decoder output?\n",
+    "\n",
+    "\t• Loss function (nn.CrossEntropyLoss)\n",
+    "\t• Evaluation / inference\n",
+    "\t• Beam search\n",
+    "\t• Metrics\n",
+    "\n",
+    "And all of these expect: (batch_size, sequence_length, vocab_size)\n",
+    "\n",
+    "Why?\n",
+    "\n",
+    "\t• Training data labels are (batch_size, num_steps)\n",
+    "\t• Loss is computed per sequence per batch\n",
+    "\t• This layout avoids permuting tensors every training step\n",
+    "\n",
+    "So after the RNN:\n",
+    "\toutputs = self.dense(outputs)          # (num_steps, batch_size, vocab_size)\n",
+    "\toutputs = outputs.swapaxes(0, 1)       # (batch_size, num_steps, vocab_size)\n",
+    "\n",
+    "This is a deliberate interface decision, not an accident.\n"
    ]
   },
   {
@@ -92700,7 +92770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c14ff2da",
    "metadata": {},
    "outputs": [],
@@ -92718,6 +92788,7 @@
     "    outputs, attention_weights = [tgt[:, (0)].unsqueeze(1), ], []\n",
     "    # outputs = [tensor1], tensor1 shape: (batch_size, 1) all <bos> tokens\n",
     "    for _ in range(num_steps):\n",
+    "        # Y shape: (batch_size, 1, vocab_size)\n",
     "        Y, dec_state = self.decoder(outputs[-1], dec_state)\n",
     "\n",
     "        #  choose highest predicted probability, next section will talk another option: beam search\n",
@@ -92725,7 +92796,12 @@
     "        # Save attention weights (to be covered later)\n",
     "        if save_attention_weights:\n",
     "            attention_weights.append(self.decoder.attention_weights)\n",
-    "    return torch.cat(outputs[1:], 1), attention_weights"
+    "    return torch.cat(outputs[1:], 1), attention_weights\n",
+    "\n",
+    "\n",
+    "# Each step predicts one new token using the accumulated decoder hidden state, but only the last predicted token is fed back as input.\n",
+    "# Not the whole prefix. Not the whole output history.\n",
+    "# Just one token per step."
    ]
   },
   {
@@ -92733,8 +92809,11 @@
    "id": "d8b33dc4",
    "metadata": {},
    "source": [
+    "#### BLEU\n",
+    "BLEU (Bilingual Evaluation Understudy) — a widely used automatic evaluation metric for sequence outputs (especially translation).\n",
+    "\n",
     "Denote by $p_n$ the precision of an n-gram, defined as the ratio of the number of matched n-grams in the predicted and target sequences to the number of n-grams in the predicted sequence. To explain, given a target sequence A, B, C, D, E and a predicted sequence A, B, B, C, D. we have \n",
-    "$p_1=4/5$, $p_2=3/4$, $p_3=1/3$ and $p_4=0$. Now let $len_{label} and $ $len_{pred}$ be the numbers of tokens in the target sequence and the predicted sequence, respectively. Then, BLEU is defined as:\n",
+    "$p_1=4/5$, $p_2=3/4$, $p_3=1/3$ and $p_4=0$. Now let $len_{label}$ and $len_{pred}$ be the numbers of tokens in the target sequence and the predicted sequence, respectively. Then, BLEU is defined as:\n",
     "$$\n",
     "\\text{BLEU} = \\exp \\left( \n",
     "    \\min \\left( 0, 1 - \\frac{\\text{len}_{\\text{label}}}{\\text{len}_{\\text{pred}}} \\right)\n",
@@ -92805,6 +92884,27 @@
    "metadata": {},
    "source": [
     "===============================================Beam Search==============================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61a42655",
+   "metadata": {},
+   "source": [
+    "Beam search maintains a fixed number k of the best partial sequences (the beam).\n",
+    "At each decoding step:\n",
+    "\n",
+    "\t1.\tExpand each candidate in the beam with every possible next token.\n",
+    "\t2.\tCompute the scores for all expanded sequences.\n",
+    "\t3.\tSelect the top k scoring candidates to form the new beam.\n",
+    "\n",
+    "By keeping only the top k candidates:\n",
+    "\n",
+    "\t•\tBeam search reduces computation compared to exhaustive search.\n",
+    "\t•\tLarger beam sizes generally improve quality (more candidates) but increase cost.\n",
+    "\t•\tA beam size of 1 reduces to greedy search.\n",
+    "\n",
+    "Beam search provides a trade-off between accuracy and efficiency via the beam size."
    ]
   },
   {
