--- a/notebooks/optimization-algorithms.ipynb
+++ b/notebooks/optimization-algorithms.ipynb
@@ -5,7 +5,7 @@
    "id": "d221a5de",
    "metadata": {},
    "source": [
-    "===================Optimization and Deep Learning======================"
+    "=================================Optimization and Deep Learning=================================="
    ]
   },
   {
@@ -24,22 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the risk function f and the empirical risk function g\n",
-    "\n",
-    "def f(x):\n",
-    "    return x * torch.cos(np.pi * x)\n",
-    "\n",
-    "def g(x):\n",
-    "    return f(x) + 0.2 * torch.cos(5 * np.pi * x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "089de541",
    "metadata": {},
    "outputs": [
@@ -1165,9 +1150,14 @@
    "source": [
     "# the minimum of the empirical risk on a training dataset may be at a different location from the minimum of the risk (generalization error).\n",
     "\n",
+    "def f(x):\n",
+    "    return x * torch.cos(np.pi * x)\n",
+    "\n",
+    "def g(x):\n",
+    "    return f(x) + 0.2 * torch.cos(5 * np.pi * x)\n",
+    "    \n",
     "def annotate(text, xy, xytext):  #@save\n",
-    "    d2l.plt.gca().annotate(text, xy=xy, xytext=xytext,\n",
-    "                           arrowprops=dict(arrowstyle='->'))\n",
+    "    d2l.plt.gca().annotate(text, xy=xy, xytext=xytext, arrowprops=dict(arrowstyle='->'))\n",
     "\n",
     "x = torch.arange(0.5, 1.5, 0.01)\n",
     "d2l.set_figsize((4.5, 2.5))\n",
@@ -2693,14 +2683,10 @@
    "id": "84d0e531",
    "metadata": {},
    "source": [
-    "\n",
-    "# 🧮 Saddle Point — Definition and Explanation\n",
-    "\n",
+    "#### Saddle Point — Definition and Explanation\n",
     "A **saddle point** is a critical point of a function where the gradient is zero, but the point is **neither a local minimum nor a local maximum**.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## **Formal Definition**\n",
+    "##### Formal Definition\n",
     "\n",
     "Let  $f : \\mathbb{R}^n \\to \\mathbb{R}$\n",
     "be a differentiable function, and let $ \\mathbf{x}^* $ satisfy  $\\nabla f(\\mathbf{x}^*) = 0.$\n",
@@ -2712,32 +2698,20 @@
     "f(\\mathbf{u}) > f(\\mathbf{x}^*) \\quad \\text{and} \\quad f(\\mathbf{v}) < f(\\mathbf{x}^*).\n",
     "$\n",
     "\n",
-    "In other words, the function increases in some directions and decreases in others near \\( \\mathbf{x}^* \\).\n",
+    "In other words, the function increases in some directions and decreases in others near $\\mathbf{x}^*$.\n",
     "\n",
-    "---\n",
+    "##### Hessian Interpretation\n",
     "\n",
-    "## **Hessian Interpretation**\n",
-    "\n",
-    "If \\( f \\) is twice differentiable, and the **Hessian** $ H(f)(\\mathbf{x}^*) $ is **indefinite** (i.e., has both positive and negative eigenvalues),  \n",
-    "then $ \\mathbf{x}^* $ is a **saddle point**.\n",
+    "If $f$ is twice differentiable, and the **Hessian** $H(f)(\\mathbf{x}^*)$ is **indefinite** (i.e., has both positive and negative eigenvalues), then $\\mathbf{x}^*$ is a **saddle point**.\n",
     "\n",
     "$\n",
     "H(f)(\\mathbf{x}^*) \\text{ indefinite} \\;\\Rightarrow\\; \\text{saddle point.}\n",
     "$\n",
     "\n",
-    "---\n",
+    "##### Example\n",
     "\n",
-    "## **Example**\n",
-    "\n",
-    "For  \n",
-    "$\n",
-    "f(x, y) = x^2 - y^2,\n",
-    "$\n",
-    "we have:\n",
-    "$\n",
-    "\\nabla f = (2x, -2y) = 0 \\Rightarrow (x, y) = (0, 0)\n",
-    "$\n",
-    "and  \n",
+    "For $f(x, y) = x^2 - y^2,$\n",
+    "we have: $\\nabla f = (2x, -2y) = 0 \\Rightarrow (x, y) = (0, 0)$ and\n",
     "$\n",
     "H(f) =\n",
     "\\begin{bmatrix}\n",
@@ -2745,9 +2719,7 @@
     "0 & -2\n",
     "\\end{bmatrix}\n",
     "$\n",
-    "has eigenvalues \\( +2 \\) and \\( -2 \\) → **indefinite** → **saddle point** at \\( (0, 0) \\).\n",
-    "\n",
-    "---"
+    "has eigenvalues $+2$ and $-2$ → **indefinite** → **saddle point** at $(0, 0)$."
    ]
   },
   {
@@ -5405,8 +5377,7 @@
     }
    ],
    "source": [
-    "x, y = torch.meshgrid(\n",
-    "    torch.linspace(-1.0, 1.0, 101), torch.linspace(-1.0, 1.0, 101))\n",
+    "x, y = torch.meshgrid(torch.linspace(-1.0, 1.0, 101), torch.linspace(-1.0, 1.0, 101))\n",
     "z = x**2 - y**2\n",
     "\n",
     "ax = d2l.plt.figure().add_subplot(111, projection='3d')\n",
@@ -6244,7 +6215,7 @@
    "id": "d19f8d3f",
    "metadata": {},
    "source": [
-    "==========================Convexity======================="
+    "======================================Convexity======================================="
    ]
   },
   {
