--- a/notebooks/optimization-algorithms.ipynb
+++ b/notebooks/optimization-algorithms.ipynb
@@ -6223,9 +6223,13 @@
    "id": "7a6aa96f",
    "metadata": {},
    "source": [
-    "convex sets\n",
+    "#### convex sets\n",
     "\n",
-    "![ConvexSetDef](./Images/ConvexSetDef.png)\n",
+    "Sets are the basis of convexity. Simply put, a set $\\mathcal{X}$ in a vector space is **convex** if for any $a, b \\in \\mathcal{X}$ the line segment connecting $a$ and $b$ is also in $\\mathcal{X}$. In mathematical terms, this means that for all $\\lambda \\in [0,1]$ we have\n",
+    "\n",
+    "$$\n",
+    "\\lambda a + (1 - \\lambda) b \\in \\mathcal{X} \\quad \\text{whenever } a, b \\in \\mathcal{X}.\n",
+    "$$\n",
     "\n",
     "![ConvexSetExample](./Images/ConvexSetExample.png)\n",
     "\n",
@@ -6237,9 +6241,13 @@
    "id": "4567db16",
    "metadata": {},
    "source": [
-    "Convex Function\n",
+    "#### Convex Function\n",
     "\n",
-    "![ConvexFunc](./Images/ConvexFunc.png)"
+    "Now that we have convex sets, we can introduce **convex functions** $f$. Given a convex set $\\mathcal{X}$, a function $f : \\mathcal{X} \\to \\mathbb{R}$ is **convex** if for all $x, x' \\in \\mathcal{X}$ and for all $\\lambda \\in [0,1]$ we have\n",
+    "\n",
+    "$$\n",
+    "\\lambda f(x) + (1 - \\lambda) f(x') \\ge f(\\lambda x + (1 - \\lambda) x').\n",
+    "$$"
    ]
   },
   {
@@ -7234,15 +7242,44 @@
     "and\n",
     "$\\mathbb{E}_X[f(X)] \\ge f\\big(\\mathbb{E}_X[X]\\big)$\n",
     "\n",
-    "The expectation of a convex function is no less than the convex function of an expectation"
+    "**The expectation of a convex function is no less than the convex function of an expectation.**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8bd3530",
+   "id": "42ef9ba0",
    "metadata": {},
    "source": [
-    "![ConvexFunctionLocalMinimaIsGlobalMinima](./Images/ConvexFunctionLocalMinimaIsGlobalMinima.png)"
+    "#### Convex Function properties 1: Local Minima Are Global \n",
+    "\n",
+    "First and foremost, the local minima of convex functions are also the global minima. We can prove this by contradiction as follows.\n",
+    "\n",
+    "Consider a convex function $f$ defined on a convex set $\\mathcal{X}$. Suppose that $x^* \\in \\mathcal{X}$ is a local minimum: there exists a small positive value $p$ such that for all $x \\in \\mathcal{X}$ satisfying\n",
+    "$$\n",
+    "0 < \\lVert x - x^* \\rVert \\le p\n",
+    "$$\n",
+    "we have $f(x^*) < f(x)$.\n",
+    "\n",
+    "Assume that the local minimum $x^*$ is not the global minimum of $f$: there exists $x' \\in \\mathcal{X}$ for which $f(x') < f(x^*)$. There also exists $\\lambda \\in [0,1)$ such that\n",
+    "$$\n",
+    "\\lambda = 1 - \\frac{p}{\\lVert x^* - x' \\rVert},\n",
+    "$$\n",
+    "so that\n",
+    "$$\n",
+    "0 < \\lVert \\lambda x^* + (1 - \\lambda) x' - x^* \\rVert \\le p.\n",
+    "$$\n",
+    "\n",
+    "However, according to the definition of convex functions, we have\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "f\\bigl(\\lambda x^* + (1 - \\lambda) x'\\bigr)\n",
+    "&\\le \\lambda f(x^*) + (1 - \\lambda) f(x') \\\\\n",
+    "&< \\lambda f(x^*) + (1 - \\lambda) f(x^*) \\\\\n",
+    "&= f(x^*),\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "which contradicts our statement that $x^*$ is a local minimum. Therefore, there does not exist $x' \\in \\mathcal{X}$ for which $f(x') < f(x^*)$. The local minimum $x^*$ is also the global minimum.\n"
    ]
   },
   {
@@ -7885,18 +7922,15 @@
    "id": "d0906a31",
    "metadata": {},
    "source": [
+    "#### Lagrangian\n",
     "\n",
-    "# Lagrangian — Concise Summary\n",
-    "\n",
-    "## 🔹 Core Idea\n",
+    "##### Core Idea\n",
     "The **Lagrangian** simplifies constrained optimization by combining the objective and constraints into one function.\n",
     "\n",
     "**Analogy:** A **ball** (solution) rolls inside a **box** (constraints).  \n",
     "The walls push back (via multipliers) when the ball hits them — at equilibrium, forces balance.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 🔹 Formulation\n",
+    "##### Formulation\n",
     "\n",
     "Original problem:\n",
     "$$\n",
@@ -7919,9 +7953,7 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 🔹 Active vs Inactive Constraints\n",
+    "##### Active vs Inactive Constraints\n",
     "\n",
     "| Type | Condition | Effect |\n",
     "|------|------------|---------|\n",
@@ -7932,9 +7964,7 @@
     "- $x \\ge 0$, solution $x=0$ → active.  \n",
     "- $x \\ge 0$, solution $x=2$ → inactive.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 🔹 Saddle Point Formulation\n",
+    "##### Saddle Point Formulation\n",
     "\n",
     "We look for a **saddle point**:\n",
     "$$\n",
@@ -7945,9 +7975,7 @@
     "\n",
     "At equilibrium, the objective and constraints balance.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## 🔹 Solving Step-by-Step\n",
+    "##### Solving Step-by-Step\n",
     "\n",
     "1. **Write Lagrangian:** $L(x, \\alpha) = f(x) + \\sum_i \\alpha_i c_i(x)$  \n",
     "2. **Stationarity:** $\\nabla f(x) + \\sum_i \\alpha_i \\nabla c_i(x) = 0$  \n",
@@ -7956,9 +7984,7 @@
     "5. **Dual Feasibility:** $\\alpha_i \\ge 0$  \n",
     "6. **Solve $(x, \\alpha)$:** combine equations to find $(x^*, \\alpha^*)$ minimizing $f(x)$.\n",
     "\n",
-    "---\n",
-    "\n",
-    "## ✅ Summary\n",
+    "##### Summary\n",
     "\n",
     "- The Lagrangian converts constraints into forces.  \n",
     "- **Lagrange multipliers** act as pressure enforcing constraints.  \n",
@@ -7971,7 +7997,7 @@
    "id": "56b000ad",
    "metadata": {},
    "source": [
-    "## 🔹 “Projection”\n",
+    "#### Projection\n",
     "\n",
     "Imagine you have a point **x** that’s *outside* some allowed region (a set **𝒳**).  \n",
     "A **projection** finds the **closest point inside 𝒳** to **x**.\n",
@@ -7985,7 +8011,7 @@
     "It means: “find the $x'$ that is inside $\\mathcal{X}$ and is closest to $x$.”  \n",
     "So projection = *“pulling x back to the legal region.”*\n",
     "\n",
-    "### 🔹 Example 1: Gradient Clipping\n",
+    "##### Example 1: Gradient Clipping\n",
     "$$\n",
     "\\mathbf{g} \\leftarrow \\mathbf{g} \\cdot \\min(1, \\frac{\\theta}{\\|\\mathbf{g}\\|})\n",
     "$$\n",
@@ -7997,9 +8023,7 @@
     "\n",
     "That’s exactly a **projection onto an $\\ell_2$ ball**.\n",
     "\n",
-    "---\n",
-    "\n",
-    "### 🔹 Example 2: Circle and Diamond (Figure Explanation)\n",
+    "##### Example 2: Circle and Diamond (Figure Explanation)\n",
     "![Projection1](./Images/projection1.png)\n",
     "\n",
     "In the figure, two shapes represent convex constraint sets:\n",
@@ -8014,7 +8038,7 @@
     "- For the **circle ($\\ell_2$)**, projection just scales the vector (keeps direction).  \n",
     "- For the **diamond ($\\ell_1$)**, projection may *change direction*, because the nearest point might lie along an edge, not directly along the same line.\n",
     "\n",
-    "## 🔹 Why This Matters\n",
+    "##### Why This Matters\n",
     "\n",
     "Projection is critical when:\n",
     "1. You’re optimizing but need to **satisfy constraints** (e.g., “weight norm ≤ θ”).  \n",
