--- a/notebooks/natural-language-processing-applications.ipynb
+++ b/notebooks/natural-language-processing-applications.ipynb
@@ -2417,7 +2417,6 @@
    "id": "15c4c2ea",
    "metadata": {},
    "source": [
-    "\n",
     "#### Natural Language Inference — Using Attention\n",
     "\n",
     "##### Overview\n",
@@ -2434,8 +2433,6 @@
     "- Token vectors: $\\mathbf{a}_i, \\mathbf{b}_j \\in \\mathbb{R}^d$\n",
     "- $[\\,\\cdot\\,,\\,\\cdot\\,]$ denotes concatenation.\n",
     "- $f, g, h$ denote learned feed-forward networks (MLPs).\n",
-    "\n",
-    "---\n",
     "\n",
     "##### 1) Attending (alignment)\n",
     "\"Attending\" = figuring out which words in one sentence should match or align with which words in the other.\n",
@@ -2456,15 +2453,11 @@
     "\n",
     "**Computational trick (decomposability):** Evaluate $f(\\cdot)$ independently on each token, making the model effectively linear in $m+n$ for the precomputations rather than quadratic.\n",
     "\n",
-    "---\n",
-    "\n",
     "##### 2) Comparing\n",
     "Compare each token with its attended counterpart using another MLP $g$:\n",
     "\n",
     "- For premise tokens: $\\mathbf{v}_{A,i} = g\\big([\\mathbf{a}_i,\\, \\boldsymbol\\beta_i]\\big), \\quad i=1,\\dots,m$\n",
     "- For hypothesis tokens: $\\mathbf{v}_{B,j} = g\\big([\\mathbf{b}_j,\\, \\boldsymbol\\alpha_j]\\big), \\quad j=1,\\dots,n$\n",
-    "\n",
-    "---\n",
     "\n",
     "##### 3) Aggregating (pooling & classification)\n",
     "Aggregate (sum) the comparison vectors:\n",
@@ -2478,15 +2471,11 @@
     "\n",
     "The output $\\hat{\\mathbf{y}}$ represents scores or probabilities over the NLI labels (entailment, contradiction, neutral).\n",
     "\n",
-    "---\n",
-    "\n",
     "##### Training details (as described in the chapter)\n",
     "- Dataset: SNLI (Stanford Natural Language Inference).\n",
     "- Embeddings: Pretrained GloVe vectors used to initialize word representations.\n",
     "- Typical hyperparameters reported: batch size 256, sequence length capped (e.g., 50), trained for a few epochs.\n",
     "- Reported accuracy in the chapter's example: approximately $82.8\\\\%$ on SNLI with a short training run.\n",
-    "\n",
-    "---\n",
     "\n",
     "##### Key takeaways\n",
     "- The decomposable attention model is simple yet effective: no RNNs/CNNs, only MLPs + attention.\n",
@@ -2495,13 +2484,10 @@
     "- Pretrained embeddings significantly help model convergence and performance.\n",
     "- Limitations: simpler models may miss long-range context or order-dependent nuances; improvements often come from richer encoders or contextualized embeddings.\n",
     "\n",
-    "---\n",
-    "\n",
     "##### Further exercises (from the chapter)\n",
     "- Extend the model with richer inputs (e.g., contextualized embeddings such as BERT).\n",
     "- Try alternative pooling strategies (max, mean, attention-weighted pooling).\n",
-    "- Analyze failure cases where order or broader context matters.\n",
-    "\n"
+    "- Analyze failure cases where order or broader context matters."
    ]
   },
   {
@@ -2749,7 +2735,7 @@
    "id": "eaba4b42",
    "metadata": {},
    "source": [
-    "=====================Fine-Tuning BERT for Sequence-Level and Token-Level Applications============================="
+    "=====================================Fine-Tuning BERT for Sequence-Level and Token-Level Applications====================================="
    ]
   },
   {
@@ -2760,9 +2746,10 @@
     "Sequence-level application:\n",
     "- Single Text Classification\n",
     "- Text Pair Classification or Regression\n",
+    "\n",
     "Token-level:\n",
     "- Text Tagging\n",
-    "- Question Answering\n"
+    "- Question Answering"
    ]
   },
   {
