--- a/notebooks/natural-language-processing-preTraining.ipynb
+++ b/notebooks/natural-language-processing-preTraining.ipynb
@@ -34,8 +34,6 @@
     "\n",
     "Example: For the sequence *\"the man loves his son\"*, if we choose *\"loves\"* as the center word and set the context window size to 2, the model predicts: *\"the\"*, *\"man\"*, *\"his\"*, *\"son\"*.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
     "##### 1️⃣ Conditional Probability of Context Words\n",
     "\n",
     "The model assumes **context words are conditionally independent** given the center word. Thus, the joint probability can be written as:\n",
@@ -43,8 +41,6 @@
     "$$\n",
     "P(w_{t-2}, w_{t-1}, w_{t+1}, w_{t+2} | w_t) = \\prod_{-m \\le j \\le m, j \\ne 0} P(w_{t+j} | w_t)\n",
     "$$\n",
-    "\n",
-    "------------------------------------------------------------------------\n",
     "\n",
     "##### 2️⃣ Probability Model (Softmax)\n",
     "\n",
@@ -61,8 +57,6 @@
     "\n",
     "where $V$ is the vocabulary.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
     "##### 3️⃣ Objective Function\n",
     "\n",
     "Given a sequence of words of length $T$, and window size $m$, the Skip-Gram model maximizes the likelihood of generating all context words given their center word:\n",
@@ -77,8 +71,6 @@
     "-\\frac{1}{T} \\sum_{t=1}^{T} \\sum_{-m \\le j \\le m, j \\ne 0} \\log P(w_{t+j} | w_t)\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
     "##### 4️⃣ Training\n",
     "\n",
     "The Skip-Gram model learns the parameters $\\mathbf{v}_w$ and $\\mathbf{u}_w$ for all words in the vocabulary by maximizing\n",
@@ -86,8 +78,6 @@
     "\n",
     "At each step, a random subsequence of words is sampled to approximate\n",
     "the gradient and update model parameters.\n",
-    "\n",
-    "------------------------------------------------------------------------\n",
     "\n",
     "##### 5️⃣ Gradient Derivation\n",
     "\n",
@@ -109,8 +99,6 @@
     "\\frac{\\partial \\log P(w_o | w_c)}{\\partial \\mathbf{u}_{w_o}} = \\mathbf{v}_{w_c} (1 - P(w_o | w_c))\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
     "##### 6️⃣ Intuition\n",
     "\n",
     "-   Skip-Gram predicts **context words** from a **center word**.\n",
@@ -128,7 +116,7 @@
    "source": [
     "#### The Continuous Bag of Words (CBOW) Model\n",
     "\n",
-    "##### 🧠 Overview\n",
+    "##### Overview\n",
     "\n",
     "The **Continuous Bag of Words (CBOW)** model predicts the **center word** given its **surrounding context words**. This is the reverse of the Skip-Gram model, which predicts context words from a center word.\n",
     "\n",
@@ -136,7 +124,7 @@
     "\n",
     "------------------------------------------------------------------------\n",
     "\n",
-    "##### 1️⃣ Conditional Probability\n",
+    "##### 1. Conditional Probability\n",
     "\n",
     "Context words are assumed to be conditionally independent contributors to predicting the center word.\n",
     "\n",
@@ -160,9 +148,7 @@
     "\n",
     "This is a softmax over all vocabulary words. $W_c$ refers to the set of context words surrounding the center word.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 2️⃣ Objective Function\n",
+    "##### 2. Objective Function\n",
     "\n",
     "Given a sequence of length $T$, the CBOW likelihood is:\n",
     "\n",
@@ -177,15 +163,11 @@
     "- \\sum_{t=1}^{T} \\log P(w_t \\mid w_{t-m}, \\ldots, w_{t+m})\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 3️⃣ Training\n",
+    "##### 3. Training\n",
     "\n",
     "CBOW uses **stochastic gradient descent (SGD)**. A random subsequence of words is sampled in each iteration to estimate gradients and update parameters.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 4️⃣ Gradient Derivation\n",
+    "##### 4. Gradient Derivation\n",
     "\n",
     "Log probability:\n",
     "\n",
@@ -209,16 +191,12 @@
     "\\right]\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### ✅ Key Takeaways\n",
+    "##### Key Takeaways\n",
     "\n",
     "-   CBOW predicts **one center word** from **multiple context words**.\n",
     "-   It **averages** context vectors → computationally efficient.\n",
     "-   Learned embeddings capture semantic similarity.\n",
-    "-   Forms half of the foundational **Word2Vec** framework (with Skip-Gram).\n",
-    "\n",
-    "------------------------------------------------------------------------\n"
+    "-   Forms half of the foundational **Word2Vec** framework (with Skip-Gram).\n"
    ]
   },
   {
@@ -237,7 +215,7 @@
    "source": [
     "#### Negative Sampling\n",
     "\n",
-    "##### 🧠 Overview\n",
+    "##### Overview\n",
     "\n",
     "The original Skip-Gram objective uses a full softmax over the entire vocabulary $∣𝑉∣$, which is computationally expensive because it requires updating gradients for all words.\n",
     "\n",
@@ -245,7 +223,7 @@
     "\n",
     "------------------------------------------------------------------------\n",
     "\n",
-    "##### 1️⃣ Positive Example Probability\n",
+    "##### 1️. Positive Example Probability\n",
     "\n",
     "Given a center word $w_c$ and true context word $w_o$:\n",
     "\n",
@@ -259,9 +237,7 @@
     "\\sigma(x) = \\frac{1}{1 + e^{-x}}\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 2️⃣ Why Negative Sampling?\n",
+    "##### 2. Why Negative Sampling?\n",
     "\n",
     "The original Skip-Gram objective considers only **positive examples**, which leads to:\n",
     "- $\\prod_{t=1}^{T} \\prod_{-m<=j<=m, j \\ne 0}P(D = 1 \\mid w^{(t)}, w^{(t+j)})$ Only maximizes when all word vectors grow to infinity → meaningless maximization (vectors blow up to infinity) \n",
@@ -269,9 +245,7 @@
     "\n",
     "Negative sampling fixes both.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 3️⃣ How Negative Sampling Works\n",
+    "##### 3. How Negative Sampling Works\n",
     "\n",
     "For each positive pair ($w_c$, $w_o$):\n",
     "- Draw **K negative samples** $w_k$ from noise distribution $P(w)$\n",
@@ -285,9 +259,7 @@
     "\\prod_{k=1}^{K} P(D = 0 \\mid w_c, w_k)\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 4️⃣ Loss Function\n",
+    "##### 4. Loss Function\n",
     "\n",
     "Let $i$ = index of center word, $h$ = index of true context word:\n",
     "\n",
@@ -309,15 +281,13 @@
     "- Positive pair → push dot product higher\n",
     "- Negative pairs → push dot products lower\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 5️⃣ Computational Efficiency\n",
+    "##### 5️. Computational Efficiency\n",
     "\n",
     "With negative sampling: - Computation depends only on **K**, not vocabulary size\n",
     "- Typical K = 5 to 20\n",
     "- Enables training on large corpora quickly\n",
     "\n",
-    "Negative sampling reduces training to a scalable binary classification problem.\n"
+    "Negative sampling reduces training to a scalable binary classification problem."
    ]
   },
   {
@@ -327,7 +297,7 @@
    "source": [
     "#### Hierarchical Softmax\n",
     "\n",
-    "##### 🧠 Overview\n",
+    "##### Overview\n",
     "\n",
     "Hierarchical softmax is an efficient alternative to the traditional softmax used in Word2Vec. Instead of computing probabilities over the entire vocabulary $|V|$,\n",
     "it organizes all words into a **binary tree**, where each **leaf node** corresponds to a word.\n",
@@ -340,9 +310,7 @@
     "O(|V|) \\quad \\rightarrow \\quad O(\\log |V|)\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 1️⃣ Tree Structure\n",
+    "##### 1️. Tree Structure\n",
     "\n",
     "-   Each word $w$ is represented as a **leaf node**.\n",
     "-   There is a unique path from the **root** to each leaf.\n",
@@ -354,9 +322,7 @@
     "\n",
     "![Hierarchical softmax](./Images/hierarchicalSoftmax.png)\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 2️⃣ Probability of a Word\n",
+    "##### 2️. Probability of a Word\n",
     "\n",
     "Hierarchical softmax computes the probability of generating word $w_o$ given center word $w_c$ as:\n",
     "\n",
@@ -377,9 +343,7 @@
     "\n",
     "So the model learns to output a correct sequence of binary choices leading to the target word’s leaf.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 3️⃣ Example\n",
+    "##### 3️. Example\n",
     "\n",
     "For word $w_3$, suppose the path is:\n",
     "\n",
@@ -397,9 +361,7 @@
     "\\sigma(\\mathbf{u}_{n_3}^T \\mathbf{v}_{w_c})\n",
     "$$\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
-    "##### 4️⃣ Valid Probability Distribution\n",
+    "##### 4️. Valid Probability Distribution\n",
     "\n",
     "Hierarchical softmax ensures that:\n",
     "\n",
@@ -409,16 +371,12 @@
     "\n",
     "even though it bypasses the full softmax.\n",
     "\n",
-    "------------------------------------------------------------------------\n",
-    "\n",
     "##### ✅ Key Takeaways\n",
     "\n",
     "-   Converts predicting a word into making $\\log |V|$ binary decisions.\n",
     "-   Efficient for large vocabularies.\n",
     "-   Widely used in Word2Vec models.\n",
-    "-   Provides a scalable alternative to full softmax.\n",
-    "\n",
-    "------------------------------------------------------------------------\n"
+    "-   Provides a scalable alternative to full softmax.\n"
    ]
   },
   {
@@ -2807,9 +2765,6 @@
     "\t - Therefore, even though the event is rare, it can produce a large gradient update.\n",
     "\t - When the corpus is huge, you accumulate many such rare pairs → instability or skewed embeddings.\n",
     "\n",
-    "\n",
-    "---\n",
-    "\n",
     "#### The GloVe Model\n",
     "\n",
     "##### Motivation\n",
@@ -3479,7 +3434,7 @@
    "id": "b0ad0d36",
    "metadata": {},
    "source": [
-    "#### From Context-Independent to Context-Sensitive\n",
+    "##### From Context-Independent to Context-Sensitive\n",
     "Traditional models like word2vec and GloVe give each word a single vector, regardless of context (e.g., “bank” has the same vector in “river bank” and “bank loan”).\n",
     "\n",
     "Context-sensitive representations solve this by making each token’s vector depend on its surrounding words.\n",
@@ -3488,7 +3443,7 @@
     "- CoVe – uses encoder states from machine translation models.\n",
     "- ELMo – uses deep bidirectional LSTMs; combines forward and backward context representations to produce embeddings that change with context. ELMo improves downstream tasks like sentiment analysis, NER, and question answering by adding context-aware information.\n",
     "\n",
-    "#### From Task-Specific to Task-Agnostic\n",
+    "##### From Task-Specific to Task-Agnostic\n",
     "ELMo improved many NLP tasks but still required integrating its embeddings into each specific task model.\n",
     "\n",
     "GPT introduced a task-agnostic pretraining architecture:\n",
@@ -3499,7 +3454,7 @@
     "\n",
     "GPT uses a left-to-right (unidirectional) language model, so each token’s representation depends only on its left context.\n",
     "\n",
-    "#### BERT: Combining the Best of Both Worlds\n",
+    "##### BERT: Combining the Best of Both Worlds\n",
     "BERT (Bidirectional Encoder Representations from Transformers) combines ELMo’s bidirectional context with GPT’s task-agnostic fine-tuning.\n",
     "Key ideas:\n",
     "- BERT uses a bidirectional Transformer encoder to capture both left and right context simultaneously.\n",
